--- a/css/index.css
+++ b/css/index.css
@@ -154,6 +154,9 @@ h4 {
   font-size: 2.5rem;
   padding-bottom: 10px;
 }
+div {
+  transition: opacity 2s;
+}
 p {
   line-height: 1.5;
   font-size: 1.6rem;
